graphiques EDA mixte

--- a/python/EDA_mixte.ipynb
+++ b/python/EDA_mixte.ipynb
@@ -220,7 +220,7 @@
     "    subset = counts[counts['Program_Name'] == program_name]\n",
     "    plt.plot(subset['Date'], subset['Count'], marker='', label=program_name)\n",
     "\n",
-    "plt.title(\"Nombre d'erreurs par Program Name en fonction du temps\")\n",
+    "plt.title(\"Nombre d'execution sans erreur par Program Name en fonction du temps\")\n",
     "plt.xlabel(\"Date\")\n",
     "plt.ylabel(\"Nombre d'occurrences\")\n",
     "plt.xticks(rotation=45)  # Pour que les dates soient lisibles\n",
