ajout de graphiques dabs EDA_mixte

--- a/python/EDA_logs.ipynb
+++ b/python/EDA_logs.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "0b1590ea-42ef-43e1-b74e-416312a20dcc",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
        "(171489, 28)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "b592af3f-84fe-43ee-be6a-15c7735f1f58",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "id": "f3d6719b-bdfb-4c39-8791-a2e91bc0859e",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 6,
    "id": "bb7809d9-d2fc-4486-a920-128db6e2b15e",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "4b14c57d-f9ee-4fbf-8294-1208620d494d",
    "metadata": {},
    "outputs": [
@@ -455,7 +455,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 8,
    "id": "636d2add-6c74-4aba-8ef8-3f5cf7548e02",
    "metadata": {},
    "outputs": [
@@ -530,16 +530,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 11,
    "id": "3cbfb6c1-ff71-4492-93dd-255839b03575",
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (272836307.py, line 11)",
+     "evalue": "invalid syntax (820021611.py, line 11)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[183], line 11\u001b[0;36m\u001b[0m\n\u001b[0;31m    t[0]=tab['Server version]['6.0.2']\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[11], line 11\u001b[0;36m\u001b[0m\n\u001b[0;31m    t[0]=tab['Server version][tab['Server version']=='6.0.2']\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -554,7 +554,7 @@
     "\n",
     "t = np.zeros((len(tab['Date']),5))\n",
     "for l in t:\n",
-    "    t[0]=tab['Server version][tab['Server version]=='6.0.2']"
+    "    t[0]=tab['Server version][tab['Server version']=='6.0.2']"
    ]
   },
   {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "id": "fd9eae32-b748-4a7a-9aee-3a6e07b3474a",
    "metadata": {},
    "outputs": [
