--- a/python/EDA_logs_erreur.ipynb
+++ b/python/EDA_logs_erreur.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "3f5d10ae-f8ab-4651-a142-cc6fb2017403",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "af43f6a9-1456-4b02-bff7-5aaeb5a9efc7",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "0b1590ea-42ef-43e1-b74e-416312a20dcc",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
        "(202402, 19)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "b592af3f-84fe-43ee-be6a-15c7735f1f58",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "f3d6719b-bdfb-4c39-8791-a2e91bc0859e",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "bb7809d9-d2fc-4486-a920-128db6e2b15e",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "4b14c57d-f9ee-4fbf-8294-1208620d494d",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
        "4  ETLPROGRAMMATIONNR50Q4  ETL Hebdo Dim 12h     2024-08-25 12:01:34  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "636d2add-6c74-4aba-8ef8-3f5cf7548e02",
    "metadata": {},
    "outputs": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "fd9eae32-b748-4a7a-9aee-3a6e07b3474a",
    "metadata": {},
    "outputs": [
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "38e88a99-94a7-4867-8368-821a59fc74d1",
    "metadata": {},
    "outputs": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "96c8289d-2e11-4ed2-9e4f-8eab2297a14b",
    "metadata": {},
    "outputs": [
@@ -559,12 +559,12 @@
    "id": "91662bf9-b910-43cf-8a95-81f6b700ec0f",
    "metadata": {},
    "source": [
-    "### Insert mode"
+    "### Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "b387e4f0-dde7-4118-9806-355dc1029922",
    "metadata": {},
    "outputs": [
@@ -577,13 +577,44 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distribution de : Model\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Model\n",
+       "DW/IntermédiaireMyPrimever/TMS/ConsoTarifTiersPreprod_GPDS-1719    197562\n",
+       "Horoquartz/Badge                                                     3847\n",
+       "Excel MyReport/Commerce/PrimForce/PROJETS/Prim Bretagne               524\n",
+       "GLPI/Techniciens                                                       52\n",
+       "Solid/Contrats                                                         34\n",
+       "                                                                    ...  \n",
+       "TMS/MF_SurtaxeFactureVentilée                                           1\n",
+       "Divers/A temps                                                          1\n",
+       "MySocial/Manager                                                        1\n",
+       "DW/Ligne1000/Conso Ligne1000/ConsoCompteGeneral                         1\n",
+       "Guidez Atelier/ConsoLafon                                               1\n",
+       "Name: count, Length: 61, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "col= tab.columns[4]\n",
     "g = tab[col].value_counts().plot.bar()\n",
     "g.set_title('Distribution de : '+col)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "print('Distribution de : '+col)\n",
+    "tab[col].value_counts()"
    ]
   },
   {
@@ -596,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "2e87fca4-a47b-4646-b47e-948878440157",
    "metadata": {},
    "outputs": [
@@ -665,7 +696,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
