--- a/notebook/EDA_myreport_cpu_full.ipynb
+++ b/notebook/EDA_myreport_cpu_full.ipynb
@@ -5,7 +5,7 @@
    "id": "58705255-372a-4c0d-8725-4e24e97d04df",
    "metadata": {},
    "source": [
-    "# Analyse Exploratoire des logs sans erreur"
+    "# Analyse Exploratoire\n"
    ]
   },
   {
@@ -33,12 +33,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
+   "id": "624ff37b-e4f9-4ff2-bb1f-2eece77092b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/echo/home/3.cours/centraleSupelec/code/smartETL/notebook\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "af43f6a9-1456-4b02-bff7-5aaeb5a9efc7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tab = pda.read_csv('../Data/241016_LogETL.csv',sep=';')"
+    "tab = pda.read_csv('../data/logServer/myreport_cpu_full.csv',sep=',')"
    ]
   },
   {
@@ -51,17 +69,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "0b1590ea-42ef-43e1-b74e-416312a20dcc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(171489, 28)"
+       "(2882, 24)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
