modification des notebook en masse

--- a/notebook/myreport_ram_full.ipynb
+++ b/notebook/myreport_ram_full.ipynb
@@ -5,7 +5,7 @@
    "id": "58705255-372a-4c0d-8725-4e24e97d04df",
    "metadata": {},
    "source": [
-    "# Analyse Exploratoire du fichier myreport_reseau_full.csv"
+    "# Analyse Exploratoire du fichier myreport_ram_full.csv"
    ]
   },
   {
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tab = pda.read_csv('../data/logServer/241016_LogETL.csv',sep=';')"
+    "tab = pda.read_csv('../data/logServer/myreport_ram_full.csv',sep=',')"
    ]
   },
   {
