--- a/notebook/myreport_reseau_full.ipynb
+++ b/notebook/myreport_reseau_full.ipynb
@@ -5,7 +5,7 @@
    "id": "58705255-372a-4c0d-8725-4e24e97d04df",
    "metadata": {},
    "source": [
-    "# Analyse Exploratoire du fichier myreport_reseau_full.csv"
+    "# Analyse Exploratoire du fichier myreport_sql_general_full.csv"
    ]
   },
   {
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "3f5d10ae-f8ab-4651-a142-cc6fb2017403",
    "metadata": {},
    "outputs": [],
@@ -33,12 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "af43f6a9-1456-4b02-bff7-5aaeb5a9efc7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tab = pda.read_csv('../data/241016_LogETL.csv',sep=';')"
+    "tab = pda.read_csv('../data/logServer/myreport_sql_general_full.csv',sep=',')"
    ]
   },
   {
@@ -51,17 +51,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "0b1590ea-42ef-43e1-b74e-416312a20dcc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(171489, 28)"
+       "(2882, 12)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
