--- a/notebook/myreport_sql_lock_full.ipynb
+++ b/notebook/myreport_sql_lock_full.ipynb
@@ -5,7 +5,7 @@
    "id": "58705255-372a-4c0d-8725-4e24e97d04df",
    "metadata": {},
    "source": [
-    "# Analyse Exploratoire du fichier myreport_reseau_full.csv"
+    "# Analyse Exploratoire du fichier myreport_sql_lock_full.csv"
    ]
   },
   {
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tab = pda.read_csv('../data/241016_LogETLError.csv', sep=';', dtype={'Program_Id': str, 'Schedules_Id': str, 'Schedules_Name': str})"
+    "tab = pda.read_csv('../data/logServer/myreport_sql_lock_full.csv', sep=',', dtype={'Program_Id': str, 'Schedules_Id': str, 'Schedules_Name': str})"
    ]
   },
   {
@@ -46,7 +46,7 @@
    "id": "ea46cfca-50ad-446f-ab1d-9b652c920009",
    "metadata": {},
    "source": [
-    "### Le fichier 241016_LogETLError.csv"
+    "### Le fichier myreport_sql_lock_full.csv"
    ]
   },
   {
@@ -58,7 +58,7 @@
     {
      "data": {
       "text/plain": [
-       "(202402, 19)"
+       "(2882, 1)"
       ]
      },
      "execution_count": 3,
