--- a/notebook/myreport_sql_statistic_full.ipynb
+++ b/notebook/myreport_sql_statistic_full.ipynb
@@ -5,7 +5,7 @@
    "id": "58705255-372a-4c0d-8725-4e24e97d04df",
    "metadata": {},
    "source": [
-    "# Analyse Exploratoire des logs AVEC erreur"
+    "# Analyse Exploratoire du fichier myreport_sql_statistic_full.csv"
    ]
   },
   {
@@ -33,12 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "af43f6a9-1456-4b02-bff7-5aaeb5a9efc7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tab = pda.read_csv('../data/241016_LogETLError.csv', sep=';', dtype={'Program_Id': str, 'Schedules_Id': str, 'Schedules_Name': str})"
+    "tab = pda.read_csv('../data/logServer/myreport_sql_statistic_full.csv', sep=',', dtype={'Program_Id': str, 'Schedules_Id': str, 'Schedules_Name': str})"
    ]
   },
   {
@@ -46,7 +46,7 @@
    "id": "ea46cfca-50ad-446f-ab1d-9b652c920009",
    "metadata": {},
    "source": [
-    "### Le fichier 241016_LogETLError.csv"
+    "### Le fichier myreport_sql_statistic_full.csv"
    ]
   },
   {
