--- a/notebook/myreport_sql_general_full.ipynb
+++ b/notebook/myreport_sql_general_full.ipynb
@@ -5,7 +5,7 @@
    "id": "58705255-372a-4c0d-8725-4e24e97d04df",
    "metadata": {},
    "source": [
-    "# Analyse Exploratoire du fichier myreport_reseau_full.csv"
+    "# Analyse Exploratoire du fichier myreport_sql_general_full.csv.csv"
    ]
   },
   {
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tab = pda.read_csv('../data/logServer/241016_LogETL.csv',sep=';')"
+    "tab = pda.read_csv('../data/logServer/myreport_sql_general_full.csv.csv',sep=',')"
    ]
   },
   {
@@ -46,7 +46,7 @@
    "id": "ea46cfca-50ad-446f-ab1d-9b652c920009",
    "metadata": {},
    "source": [
-    "### Le fichier 241016_LogETL.csv : taille, colonnes"
+    "### Le fichier myreport_sql_general_full.csv : taille, colonnes"
    ]
   },
   {
