modification des notebook en masse

--- a/notebook/myreport2016_cpu.ipynb
+++ b/notebook/myreport2016_cpu.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tab = pda.read_csv('../data/logServer/myreport2016_cpu.csv',sep=';')"
+    "tab = pda.read_csv('../data/logServer/myreport2016_cpu.csv',sep=',')"
    ]
   },
   {
@@ -58,7 +58,7 @@
     {
      "data": {
       "text/plain": [
-       "(171489, 28)"
+       "(2162, 24)"
       ]
      },
      "execution_count": 3,
@@ -87,13 +87,14 @@
     {
      "data": {
       "text/plain": [
-       "Index(['Server version', 'Client version', 'Model', 'Type', 'Insert mode',\n",
-       "       'Rows added', 'Rows updated', 'Rows deleted', 'Rows in error',\n",
-       "       'Rows in warning', 'Columns', 'Date', 'Start time', 'End  time',\n",
-       "       'Duration', 'Machine', 'Session', 'Project name', 'Product', 'Result',\n",
-       "       'ETL_StartDateTime', 'Launcher_Id', 'Launcher_Name', 'Program_Id',\n",
-       "       'Program_Name', 'Schedules_Id', 'Schedules_Name',\n",
-       "       'Schedules_StartDateTime'],\n",
+       "Index(['Date et heure', 'Date et heure(RAW)', 'Somme', 'Somme(RAW)',\n",
+       "       'Processeur 1', 'Processeur 1(RAW)', 'Processeur 2',\n",
+       "       'Processeur 2(RAW)', 'Processeur 3', 'Processeur 3(RAW)',\n",
+       "       'Processeur 4', 'Processeur 4(RAW)', 'Processeur 5',\n",
+       "       'Processeur 5(RAW)', 'Processeur 6', 'Processeur 6(RAW)',\n",
+       "       'Processeur 7', 'Processeur 7(RAW)', 'Processeur 8',\n",
+       "       'Processeur 8(RAW)', 'Temps mort', 'Temps mort(RAW)', 'Couverture',\n",
+       "       'Couverture(RAW)'],\n",
        "      dtype='object')"
       ]
      },
