--- a/notebook/myreport_cpu_full.ipynb
+++ b/notebook/myreport_cpu_full.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "3f5d10ae-f8ab-4651-a142-cc6fb2017403",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "093f2159-38cf-49e0-adb1-6b1af8ee222a",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "af43f6a9-1456-4b02-bff7-5aaeb5a9efc7",
    "metadata": {},
    "outputs": [],
@@ -65,58 +65,48 @@
    "id": "ea46cfca-50ad-446f-ab1d-9b652c920009",
    "metadata": {},
    "source": [
-    "### Le fichier 241016_LogETL.csv : taille, colonnes"
+    "### Le fichier myreport_cpu_full.csv : taille, colonnes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "0b1590ea-42ef-43e1-b74e-416312a20dcc",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(2882, 24)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "il y a  2882  lignes et  24  colonnes dans le data frame\n"
+     ]
     }
    ],
    "source": [
-    "tab.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "930854ee-00d2-43f6-8b91-105535497bd1",
-   "metadata": {},
-   "source": [
-    "Il y a 171 489 lignes et 28 colonnes dans le dataframe. "
+    "print(\"il y a \",tab.shape[0],\" lignes et \",tab.shape[1],\" colonnes dans le data frame\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "b592af3f-84fe-43ee-be6a-15c7735f1f58",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Server version', 'Client version', 'Model', 'Type', 'Insert mode',\n",
-       "       'Rows added', 'Rows updated', 'Rows deleted', 'Rows in error',\n",
-       "       'Rows in warning', 'Columns', 'Date', 'Start time', 'End  time',\n",
-       "       'Duration', 'Machine', 'Session', 'Project name', 'Product', 'Result',\n",
-       "       'ETL_StartDateTime', 'Launcher_Id', 'Launcher_Name', 'Program_Id',\n",
-       "       'Program_Name', 'Schedules_Id', 'Schedules_Name',\n",
-       "       'Schedules_StartDateTime'],\n",
+       "Index(['Date et heure', 'Date et heure(RAW)', 'Somme', 'Somme(RAW)',\n",
+       "       'Processeur 1', 'Processeur 1(RAW)', 'Processeur 2',\n",
+       "       'Processeur 2(RAW)', 'Processeur 3', 'Processeur 3(RAW)',\n",
+       "       'Processeur 4', 'Processeur 4(RAW)', 'Processeur 5',\n",
+       "       'Processeur 5(RAW)', 'Processeur 6', 'Processeur 6(RAW)',\n",
+       "       'Processeur 7', 'Processeur 7(RAW)', 'Processeur 8',\n",
+       "       'Processeur 8(RAW)', 'Temps mort', 'Temps mort(RAW)', 'Couverture',\n",
+       "       'Couverture(RAW)'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "f3d6719b-bdfb-4c39-8791-a2e91bc0859e",
    "metadata": {},
    "outputs": [
@@ -136,40 +126,36 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 171489 entries, 0 to 171488\n",
-      "Data columns (total 28 columns):\n",
-      " #   Column                   Non-Null Count   Dtype  \n",
-      "---  ------                   --------------   -----  \n",
-      " 0   Server version           171489 non-null  object \n",
-      " 1   Client version           171489 non-null  object \n",
-      " 2   Model                    171489 non-null  object \n",
-      " 3   Type                     171489 non-null  object \n",
-      " 4   Insert mode              171489 non-null  object \n",
-      " 5   Rows added               171489 non-null  int64  \n",
-      " 6   Rows updated             171489 non-null  int64  \n",
-      " 7   Rows deleted             171489 non-null  int64  \n",
-      " 8   Rows in error            0 non-null       float64\n",
-      " 9   Rows in warning          0 non-null       float64\n",
-      " 10  Columns                  171489 non-null  int64  \n",
-      " 11  Date                     171489 non-null  object \n",
-      " 12  Start time               171489 non-null  object \n",
-      " 13  End  time                171489 non-null  object \n",
-      " 14  Duration                 171489 non-null  object \n",
-      " 15  Machine                  171489 non-null  object \n",
-      " 16  Session                  171489 non-null  object \n",
-      " 17  Project name             171489 non-null  object \n",
-      " 18  Product                  171489 non-null  object \n",
-      " 19  Result                   171489 non-null  object \n",
-      " 20  ETL_StartDateTime        171489 non-null  object \n",
-      " 21  Launcher_Id              4463 non-null    object \n",
-      " 22  Launcher_Name            171489 non-null  object \n",
-      " 23  Program_Id               168132 non-null  object \n",
-      " 24  Program_Name             171489 non-null  object \n",
-      " 25  Schedules_Id             167439 non-null  object \n",
-      " 26  Schedules_Name           167439 non-null  object \n",
-      " 27  Schedules_StartDateTime  171489 non-null  object \n",
-      "dtypes: float64(2), int64(4), object(22)\n",
-      "memory usage: 36.6+ MB\n"
+      "RangeIndex: 2882 entries, 0 to 2881\n",
+      "Data columns (total 24 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   Date et heure       2882 non-null   object \n",
+      " 1   Date et heure(RAW)  2881 non-null   float64\n",
+      " 2   Somme               2195 non-null   object \n",
+      " 3   Somme(RAW)          2194 non-null   float64\n",
+      " 4   Processeur 1        1237 non-null   object \n",
+      " 5   Processeur 1(RAW)   2194 non-null   float64\n",
+      " 6   Processeur 2        1459 non-null   object \n",
+      " 7   Processeur 2(RAW)   2194 non-null   float64\n",
+      " 8   Processeur 3        1786 non-null   object \n",
+      " 9   Processeur 3(RAW)   2194 non-null   float64\n",
+      " 10  Processeur 4        1700 non-null   object \n",
+      " 11  Processeur 4(RAW)   2194 non-null   float64\n",
+      " 12  Processeur 5        1451 non-null   object \n",
+      " 13  Processeur 5(RAW)   2194 non-null   float64\n",
+      " 14  Processeur 6        1459 non-null   object \n",
+      " 15  Processeur 6(RAW)   2194 non-null   float64\n",
+      " 16  Processeur 7        1608 non-null   object \n",
+      " 17  Processeur 7(RAW)   2194 non-null   float64\n",
+      " 18  Processeur 8        1391 non-null   object \n",
+      " 19  Processeur 8(RAW)   2194 non-null   float64\n",
+      " 20  Temps mort          2192 non-null   object \n",
+      " 21  Temps mort(RAW)     2194 non-null   float64\n",
+      " 22  Couverture          2882 non-null   object \n",
+      " 23  Couverture(RAW)     2881 non-null   float64\n",
+      "dtypes: float64(12), object(12)\n",
+      "memory usage: 540.5+ KB\n"
      ]
     }
    ],
@@ -189,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "bb7809d9-d2fc-4486-a920-128db6e2b15e",
    "metadata": {},
    "outputs": [
@@ -197,34 +183,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Server version                  5\n",
-      "Client version                  5\n",
-      "Model                         946\n",
-      "Type                            5\n",
-      "Insert mode                     4\n",
-      "Rows added                  67281\n",
-      "Rows updated                    2\n",
-      "Rows deleted                 4817\n",
-      "Rows in error                   0\n",
-      "Rows in warning                 0\n",
-      "Columns                        77\n",
-      "Date                          217\n",
-      "Start time                 171469\n",
-      "End  time                  171488\n",
-      "Duration                   170962\n",
-      "Machine                         1\n",
-      "Session                         1\n",
-      "Project name                    1\n",
-      "Product                         4\n",
-      "Result                          3\n",
-      "ETL_StartDateTime           10049\n",
-      "Launcher_Id                     8\n",
-      "Launcher_Name                   8\n",
-      "Program_Id                     45\n",
-      "Program_Name                   46\n",
-      "Schedules_Id                   41\n",
-      "Schedules_Name                 76\n",
-      "Schedules_StartDateTime      8098\n",
+      "Date et heure         2882\n",
+      "Date et heure(RAW)    2881\n",
+      "Somme                  456\n",
+      "Somme(RAW)            1062\n",
+      "Processeur 1            31\n",
+      "Processeur 1(RAW)      822\n",
+      "Processeur 2            62\n",
+      "Processeur 2(RAW)     1086\n",
+      "Processeur 3            73\n",
+      "Processeur 3(RAW)     1226\n",
+      "Processeur 4            60\n",
+      "Processeur 4(RAW)     1124\n",
+      "Processeur 5            63\n",
+      "Processeur 5(RAW)     1066\n",
+      "Processeur 6            64\n",
+      "Processeur 6(RAW)     1034\n",
+      "Processeur 7            62\n",
+      "Processeur 7(RAW)     1121\n",
+      "Processeur 8            55\n",
+      "Processeur 8(RAW)      993\n",
+      "Temps mort              13\n",
+      "Temps mort(RAW)         25\n",
+      "Couverture              13\n",
+      "Couverture(RAW)         12\n",
       "dtype: int64\n"
      ]
     }
