--- a/notebook/myreport_ram_full.ipynb
+++ b/notebook/myreport_ram_full.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "3f5d10ae-f8ab-4651-a142-cc6fb2017403",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "af43f6a9-1456-4b02-bff7-5aaeb5a9efc7",
    "metadata": {},
    "outputs": [],
@@ -46,36 +46,25 @@
    "id": "ea46cfca-50ad-446f-ab1d-9b652c920009",
    "metadata": {},
    "source": [
-    "### Le fichier 241016_LogETL.csv : taille, colonnes"
+    "### Le fichier myreport_ram_full.csv : taille, colonnes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "0b1590ea-42ef-43e1-b74e-416312a20dcc",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(171489, 28)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "il y a  2882  lignes et  10  colonnes dans le data frame\n"
+     ]
     }
    ],
    "source": [
-    "tab.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "930854ee-00d2-43f6-8b91-105535497bd1",
-   "metadata": {},
-   "source": [
-    "Il y a 171 489 lignes et 28 colonnes dans le dataframe. "
+    "print(\"il y a \",tab.shape[0],\" lignes et \",tab.shape[1],\" colonnes dans le data frame\")"
    ]
   },
   {
