--- a/notebook/myreport_espace_disque_full.ipynb
+++ b/notebook/myreport_espace_disque_full.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tab = pda.read_csv('../data/logServer/myreport_espace_disque_full.csv',sep=';')"
+    "tab = pda.read_csv('../data/logServer/myreport_espace_disque_full.csv',sep=',')"
    ]
   },
   {
@@ -46,7 +46,7 @@
    "id": "ea46cfca-50ad-446f-ab1d-9b652c920009",
    "metadata": {},
    "source": [
-    "### Le fichier 241016_LogETL.csv : taille, colonnes"
+    "### Le fichier myreport_espace_disque_full.csv : taille, colonnes"
    ]
   },
   {
@@ -67,15 +67,7 @@
     }
    ],
    "source": [
-    "tab.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "930854ee-00d2-43f6-8b91-105535497bd1",
-   "metadata": {},
-   "source": [
-    "Il y a 171 489 lignes et 28 colonnes dans le dataframe. "
+    "print(\"il y a \",tab.shape[0],\" lignes et \",tab.shape[1],\" colonnes dans le data frame\")"
    ]
   },
   {
